2010-11-29  Sarlmol Apple  <sarlmolapple@gmail.com>

	* src/ol_player-mpris.c (osd_lyrics_SOURCES): MERGE:Merge asyn-dbus branch r390:r401 into trunk


2010-11-29  Sarlmol Apple  <sarlmolapple@gmail.com>

	* src/Makefile.am (osd_lyrics_SOURCES): ADD:Supports Listen Music Player.

2010-11-27  Sarlmol Apple  <sarlmolapple@gmail.com>
	FIXED: Issue 151(2), Cant close the scroll windows while swithing the display mode. 
	* src/ol_scroll_module.c (ol_scroll_module_free): 

2010-11-26  Sarlmol Apple  <sarlmolapple@gmail.com>

	* src/ol_player.c (ol_player_init): ADD:Supports clementine

2010-08-23  Sarlmol Apple  <sarlmolapple@gmail.com>

	* src/ol_player_guayadeque02.c : ADD: Guayadeque0.2.5 support
2010-07-10  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_muine.c : ADD: Muine support

2010-06-09  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_about.c: CHANGE: Apply changes in preference immediately, the OK button is removed

	* src/ol_osd_window.c: FIX: The color changes of OSD Window will be applied immediately.

	* src/ol_option.c: CHANGE: Do not show preference dialog as modal.

	* src/ol_main.c (_on_config_changed): FIX: The player info is now set when switching between display modes.

	* src/ol_image_button.c (ol_image_button_destroy): FIX: Partially fix the bug that cause the image of image button be freed twice.

2010-06-08  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c: ADD: Options for display modes

	* src/ol_config_property.h (config_str): ADD: Add config options for display mode

	* src/ol_scroll_module.c: CHANGE: Refactor scroll module to be an instance of display module

	* src/ol_osd_module.c: CHANGE: Refactor OSD module to be an instance of display module

	* src/ol_display_module.c: ADD: Extract display module interfaces

2010-06-07  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: Use the queue drawing mechanism of gtk instead of painting the lyrics directly in OSD Window.
