@@ -1,6 +1,6 @@
 /* -*- C++ -*- */
 
-/* Time-stamp: <2010-11-29 13:33:25 Monday by sarlmolapple> */
+/* Time-stamp: <2010-12-06 06:49:47 Monday by sarlmolapple> */
 
 /**
  * @file
@@ -10,6 +10,7 @@
 
 #ifndef _OL_PLAYER_LISTEN_H
 #define _OL_PLAYER_LISTEN_H
+#include "ol_player.h"
 
 struct OlPlayer* ol_player_listen_get ();
 
